Closed Bug 1509222 Opened 6 years ago Closed 6 years ago

XUL toolbarbutton with checked="true' but not type="checkbox" doesn't get the pressed state

Categories

(Core :: Disability Access APIs, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: Jamie, Assigned: MarcoZ)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

STR:
1. Press the Sidebars button on the main toolbar to show the sidebar.
2. Open the Browser Toolbox and the Accessibility panel therein.
3. Find the Sidebars button.
4. Check its states.
Expected: It should have the pressed state.
Actual: It doesn't.

We do support checked="true" for buttons (and thus toolbarbuttons), but only if type="checkbox" or type="radio" is set. It seems there are some toolbar buttons (like the Sidebars button) that don't set type="checkbox" but do set checked="true". We can't know whether to set the checkable state in this case, so the user won't know that it is pressable. Regardless, we should expose the pressed state if checked="true".
Simply decouple the check for the checked attribute from the one for the type attribute.
Assignee: nobody → mzehe
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ad6143ff142d
XUL toolbarbutton with checked="true' but not type="checkbox" doesn't get the pressed state, r=Jamie
https://hg.mozilla.org/mozilla-central/rev/ad6143ff142d
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Blocks: xula11y
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: