Bug 1509222 - XUL toolbarbutton with checked="true' but not type="checkbox" doesn't get the pressed state, r=Jamie

Simply decouple the check for the checked attribute from the one for the type attribute.

Differential Revision: https://phabricator.services.mozilla.com/D12632

--HG--
extra : moz-landing-system : lando